<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    app:contentPadding="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutrv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">


        <TextView
            android:id="@+id/tvJenisKamar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Jenis Kamar"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvTanggal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Tanggal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvJenisKamar" />

        <TextView
            android:id="@+id/tvDurasi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Caption"
            tools:text="Durasi"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTanggal" />

        <ImageView
            android:id="@+id/icon_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_delete_24"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/icon_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_edit_24"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/icon_delete"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>